{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 65,
  "lineage": "70d4d9c1-7bc5-15fc-a4fa-77de2773d34e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:066756667240:vpc/vpc-0eb98e95895a40f00",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a0edeeb880cce747",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-053a4bf1bd9706aaa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb98e95895a40f00",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bd204a99f3678766",
            "owner_id": "066756667240"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a48f0eb14f87a2b",
            "arn": "arn:aws:ec2:ap-south-1:066756667240:elastic-ip/eipalloc-04a48f0eb14f87a2b",
            "association_id": "eipassoc-0cc43b97856ae396d",
            "domain": "vpc",
            "id": "eipalloc-04a48f0eb14f87a2b",
            "instance": "i-0a9af4e4cdaf9735f",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-01312f85fce577539",
            "private_dns": "ip-172-31-16-15.ap-south-1.compute.internal",
            "private_ip": "172.31.16.15",
            "public_dns": "ec2-65-2-203-196.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.203.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dice-api-eip"
            },
            "tags_all": {
              "CostCenter": "Bootstrap",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "dice-api-eip",
              "Project": "DICE"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_instance.api",
            "aws_key_pair.operator",
            "aws_security_group.api",
            "data.aws_ami.ubuntu_arm",
            "data.aws_vpc.default",
            "data.http.cloudflare_ipv4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098c6897e3d65b63b",
            "arn": "arn:aws:ec2:ap-south-1:066756667240:instance/i-0a9af4e4cdaf9735f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dice-ec2-profile",
            "id": "i-0a9af4e4cdaf9735f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "dice-operator",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01312f85fce577539",
            "private_dns": "ip-172-31-16-15.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.16.15",
            "public_dns": "ec2-65-2-203-196.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.203.196",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:066756667240:key/e643ce12-fa87-4e8e-912e-9056121cdf34",
                "tags": {
                  "Name": "dice-api-root"
                },
                "tags_all": {
                  "CostCenter": "Bootstrap",
                  "Environment": "production",
                  "ManagedBy": "Terraform",
                  "Name": "dice-api-root",
                  "Project": "DICE"
                },
                "throughput": 125,
                "volume_id": "vol-083ac6f38f342ce43",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dice-api-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025b5c97809762c9d",
            "tags": {
              "Name": "dice-api"
            },
            "tags_all": {
              "CostCenter": "Bootstrap",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "dice-api",
              "Project": "DICE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01c4f666fdb25a92b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_key_pair.operator",
            "aws_security_group.api",
            "data.aws_ami.ubuntu_arm",
            "data.aws_vpc.default",
            "data.http.cloudflare_ipv4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0326c8c1e2d6bf78c",
            "arn": "arn:aws:ec2:ap-south-1:066756667240:instance/i-0317ea91e2a50b8c9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "monitoring-instance-profile",
            "id": "i-0317ea91e2a50b8c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "monitoring-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08493a45469edd60e",
            "private_dns": "ip-172-31-33-155.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.155",
            "public_dns": "ec2-13-201-13-174.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.13.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "CostCenter": "Bootstrap",
                  "Environment": "production",
                  "ManagedBy": "Terraform",
                  "Project": "DICE"
                },
                "tags_all": {
                  "CostCenter": "Bootstrap",
                  "Environment": "production",
                  "ManagedBy": "Terraform",
                  "Project": "DICE"
                },
                "throughput": 0,
                "volume_id": "vol-0b92096da5ec2d8d2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "monitoring-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a4cd6bc788c933d",
            "tags": {
              "Name": "monitoring-prometheus"
            },
            "tags_all": {
              "CostCenter": "Bootstrap",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "monitoring-prometheus",
              "Project": "DICE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6a3cb06d512099a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.monitoring_profile",
            "aws_iam_role.monitoring_role",
            "aws_security_group.monitoring_sg",
            "data.aws_ami.ubuntu_x86",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:066756667240:security-group/sg-01c4f666fdb25a92b",
            "description": "DICE API security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c4f666fdb25a92b",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.165.30.80/32"
                ],
                "description": "SSH from operator",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "173.245.48.0/20",
                  "103.21.244.0/22",
                  "103.22.200.0/22",
                  "103.31.4.0/22",
                  "141.101.64.0/18",
                  "108.162.192.0/18",
                  "190.93.240.0/20",
                  "188.114.96.0/20",
                  "197.234.240.0/22",
                  "198.41.128.0/17",
                  "162.158.0.0/15",
                  "104.16.0.0/13",
                  "104.24.0.0/14",
                  "172.64.0.0/13",
                  "131.0.72.0/22"
                ],
                "description": "HTTP from Cloudflare (for ACME challenge)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "173.245.48.0/20",
                  "103.21.244.0/22",
                  "103.22.200.0/22",
                  "103.31.4.0/22",
                  "141.101.64.0/18",
                  "108.162.192.0/18",
                  "190.93.240.0/20",
                  "188.114.96.0/20",
                  "197.234.240.0/22",
                  "198.41.128.0/17",
                  "162.158.0.0/15",
                  "104.16.0.0/13",
                  "104.24.0.0/14",
                  "172.64.0.0/13",
                  "131.0.72.0/22"
                ],
                "description": "HTTPS from Cloudflare",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dice-api-sg",
            "name_prefix": "",
            "owner_id": "066756667240",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "CostCenter": "Bootstrap",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "DICE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb98e95895a40f00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "data.http.cloudflare_ipv4"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:066756667240:security-group/sg-0a6a3cb06d512099a",
            "description": "Allow inbound Prometheus and Grafana from office IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6a3cb06d512099a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP (NGINX reverse proxy)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "monitoring-sg",
            "name_prefix": "",
            "owner_id": "066756667240",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "CostCenter": "Bootstrap",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "DICE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb98e95895a40f00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}